syntax = "proto3";

package liaison.v1;
import "google/protobuf/timestamp.proto";

message Request {
  string order_id = 1;
  string created_by = 2;
  map<string, OrderItem> items = 3;
}

message OrderItem {
  string code = 1;
  int32 quantity = 2;
  double price = 3;
}